# gchp_legacy

./: .gitignore  CMakeLists.txt  Chem_GridCompMod.F90  Dyn_GridCompMod.F90  GCSA-HowTo.docx  GEOSChem.F90  GEOS_HyCoords.H  GEOS_ctmEnvGridComp.F90  GIGC.mk  GIGC_Connections.H  GIGC_GridCompMod.F90  GIGCchem_DeclarePointer___.h  GIGCchem_ExportSpec___.h  GIGCchem_GetPointer___.h  GIGCchem_History___.rc  GIGCchem_ImportSpec___.h  GIGCchem_InternalSpec___.h  GIGCdyn_DeclarePointer___.h  GIGCdyn_GetPointer___.h  GIGCdyn_ImportSpec___.h  HEMCO_GridCompMod.F90  HEMCO_Includes_AfterRun.H  HEMCO_Includes_BeforeRun.H  Includes_After_Dyn.H  Includes_After_Run.H  Includes_Before_Dyn.H  Includes_Before_Run.H  Makefile  README.md  createRunDir.sh  gc_land_interface.F90  gchp_utils.F90  gigc_chunk_mod.F90  gigc_chunk_mod_old.bkp  gigc_diagnostics_mod.F90  gigc_finalization_mod.F90  gigc_historyexports_mod.F90  gigc_initialization_mod.F90  gigc_initialization_mod_old.bkp  gigc_mpi_wrap.F90  (+5 more)
FVdycoreCubed_GridComp/: AdvCore_GridCompMod.F90  AppGridCreate.F90  CMakeLists.txt  CreateInterpWeights_GridCompMod.F90  CreateTopography.F90  Cube2LatLon.F90  CubedSphereGridFactory.F90  DynCore_GridCompMod.F90  FV_StateMod.F90  FVdycore_arch.mk  GNUmakefile  GetWeights.F90  GetWeights.F90.hold  GetWeightsC2C.F90  LatLon2Cube.F90  StandAlone_AdvCore.F90  StandAlone_DynAdvCore.F90  StandAlone_DynAdvCore_GridCompMod.F90  StandAlone_FV3_Dycore.F90  c2c.F90  c2l_CFIO_offline.F90  interp_restarts.F90
FVdycoreCubed_GridComp/CVS/: Entries  Repository
FVdycoreCubed_GridComp/fvdycore/: CMakeLists.txt  FVdycore_arch.mk  GNUmakefile  path_names
Shared/: CMakeLists.txt  GNUmakefile  my_copy.sh
Shared/CVS/: Entries  Repository
Shared/Chem_Base/: Aod-550nm_Registry.rc  Aod3d_1064nm.rc  Aod3d_355nm.rc  Aod3d_532nm.rc  AodBands_Registry.rc  Aod_CALIPSO.rc  Aod_EOS.rc  Aod_MODIS.rc  Aod_Registry.rc  Chem_Aod.F90  Chem_Aod3d.F90  Chem_AodMod.F90  Chem_BundleMod.F90  Chem_BundleToG5rs.F90  Chem_Ext3d.rc  Chem_InitMod.F90  Chem_Mie-550nm.rc  Chem_Mie.rc  Chem_MieMod.F90  Chem_MieRegistry.rc  Chem_MieTableMod.F90  Chem_Registry.rc  Chem_RegistryMod---stub.F90  Chem_RegistryMod.F90  Chem_SimpleBundleMod.F90  GNUmakefile  ctl_crst.F90  ext.rc  ext_calculator.F90  gogo.F90  reff.rc  reff_calculator.F90
Shared/Chem_Shared/: CMakeLists.txt  Chem_SettlingMod.F90  Chem_StateMod.F90  Chem_UtilMod.F90  ConvectionMod.F90  DryDepositionMod.F90  DustEmissionMod.F90  GNUmakefile  GmiTimeControl_mod.F90  NitrateChemDriverMod.F90  SmokeEmissionMod.F90  SulfateChemDriverMod.F90  VegLaiMod.F90  WetRemovalMod.F90
Shared/Config/: ESMA_arch.mk  ESMA_base.mk  GMAO_base.mk  GNUmakefile  NCEP_base.mk  absoft.mk  compiler.mk  cray.mk  darwin.mk  fdp  gfortran.mk  ifort.mk  linux.mk  math.mk  mpi.mk  nagfor.mk  new.ESMA_arch.mk  pgfortran.mk  protex  tau.mk  vectorize.mk
Shared/GEOS_Shared/: CMakeLists.txt  DragCoefficients.F90  G3_MPI_Util_Mod.F90  GEOS.F90  GEOS_GmapMod.F90  GEOS_RemapMod.F90  GEOS_TopoGet.F90  GEOS_Utilities.F90  GNUmakefile  OVP.F90  PWSSSP.F  condense.F90  dqsat.code  dqsat_fast.code  dqsat_new.code  qsat.code  qsat.h  qsat_fast.code  qsat_new.code  sphere.F  surfacelayer.F90  tropovars.F90  tstqsat.F90  windfix.F90
Shared/GEOS_Util/: CMakeLists.txt  GNUmakefile
Shared/GFDL_fms/: CMakeLists.txt  FMS_arch.mk  GNUmakefile  GNUmakefile_r4r8  path_names
Shared/GMAO_etc/: Arch_utils.pm  CMakeLists.txt  Conv_utils.pm  Err_Log.pl  Err_Log.pm  Extract_config.pm  Functions.csh  Functions.ppt  GMAO_utils.pm  GNUmakefile  Manipulate_time.pm  PUBLICTAG  Pasta.pm  Perl_Config.pm  Query.pm  Remote_utils.pm  RmShmKeys_sshmpi.csh  Round.pm  Run_parallel.pm  Verbose.pm  WriteLog.pm  acquire  acquire.rc  acquire_obsys  ana4dupd.pl  append_gsigcrc.pl  argopt  argopt.c  bacon  bacon.rc  bbscp.pl  check_obsysrc.py  cmpdir.pl  datank  diffdates.py  esma_mpirun  extract_config.pl  fln  fndate.pl  fresolv.f90  (+74 more)
Shared/GMAO_gfio/: Arch.mk  CMakeLists.txt  GFIO_mean.f90  GFIO_py.F90  GNUmakefile  GNUmakefile_r4r8  README  diffdate.f  getdate.f  gfio.f  gfio.h  gfioCF.F  gfio_flush.F  gfio_idl.c  gfio_init.f  gfio_test.F  gfioutil.f  m_GFIO_GetFld.f  m_GFIO_PutFld.f  m_gfio.f90  make.dist.csh  testcall.c  timesubs.f  ut_cyclic.f90
Shared/GMAO_hermes/: AnIntro  CMakeLists.txt  GFIO_Shave.f90  GFIO_remap.f90  GMAO_hermes_arch.mk  GNUmakefile  README.geos2fv  alias.h  ana.prs.rc  ana5sfc  ana5sfc.F90  blendq.ctl  blendq.f90  cnv2prs.pl  const_2d_asm_Nx.rc  const_2d_chm_Fx.rc  diag2dyn.F  drs2dyn.f90  dyn2drs.f90  dyn2dyn.f90  dyn2dyn.rc  dyn2prs.f90  dyn2prs.rc  dyn2real_eta.f90  dyn2rs5.f90  dyn52dyn.f90  dyn_boot.f90  dyn_cov.f90  dyn_efsens.f90  dyn_inflate.f90  dyn_iupd.F90  dyn_ncf2dyn.f90  dyn_pert_remap.F90  dyn_rankhist.F90  dyn_recenter.f90  dyndiff.f90  dyndims.f  dyndot.f90  dynp.f90  echorc.f90  (+119 more)
Shared/GMAO_mpeu/: CMakeLists.txt  GNUmakefile  get_zeits.c  m_FileResolv.f90  m_StrTemplate.F90  m_String.F90  m_date.F90  m_datetime.F90  m_flow.F90  m_inpak90.F90  m_ior4.F90  m_ioutil.F90  m_mall.F90  m_mpif90.F90  m_rGrADS.F90  m_realkinds.F90  m_wGrADS.F90  m_zeit.F90
Shared/GMAO_pFIO/: CMakeLists.txt  FileMetadata.F90  GNUmakefile  NetCDF4_FileFormatter.F90  NetCDF4_get_var.H  UnlimitedEntity.F90  Variable.F90  pfio_collective_demo.F90  pfio_io_demo.F90
Shared/GMAO_perllib/: CMakeLists.txt  GNUmakefile
Shared/GMAO_pilgrim/: CMakeLists.txt  GMAO_pilgrim_arch.mk  GNUmakefile  PILGRIM_xyMod.F90  debugutilitiesmodule.F90  decompmodule.F90  ghostmodule.F90  mod_comm.F90  parutilitiesmodule.F90  redistributemodule.F90  shr_kind_mod.F90  timingModule.F90
Shared/MAPL_Base/: #MAPL_VarSpecMod.F90#  CMakeLists.txt  CubeToLatLon.F90  ESMFL_Mod.F90  ESMFL_Mod.P90  GNUmakefile  GetPointer.H  HorzBinning.F90  MAPL_AbstractGridFactory.F90  MAPL_AbstractRegridder.F90  MAPL_Base.F90  MAPL_CFIO.F90  MAPL_CFIOServer.F90  MAPL_Cap.F90  MAPL_CapGridComp.F90  MAPL_Comms.P90  MAPL_Config.F90  MAPL_Constants.F90  MAPL_ErrLog.h  MAPL_EsmfRegridder.F90  MAPL_ExtDataGridCompMod.F90  MAPL_Generic.F90  MAPL_GenericCplComp.F90  MAPL_GridManager.F90  (+55 more)
(+3448 files in other folders)
